Fixed spacing on previous commit (s/padding/margin)

--- a/src/app/cribbage.css
+++ b/src/app/cribbage.css
@@ -1,7 +1,7 @@
 .cr-card-name {
     display: inline-block;
-    width: 128px;
-    padding: 6px;
+    width: 135px;
+    margin: 6px;
 }
 
 .btn.cr-suit-btn {
